--- a/src/Voice_Auth/locale/hi/LC_MESSAGES/django.po
+++ b/src/Voice_Auth/locale/hi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-15 16:06+0530\n"
+"POT-Creation-Date: 2019-10-20 16:56+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,78 +17,160 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: .\Voice_Auth\settings.py:121
-msgid "English"
-msgstr ""
-
 #: .\Voice_Auth\settings.py:122
+msgid "English"
+msgstr "अंग्रेज़ी"
+
+#: .\Voice_Auth\settings.py:123
 msgid "Hindi"
+msgstr "हिंदी"
+
+#: .\accounts\forms.py:23 .\accounts\forms.py:77 .\accounts\forms.py:107
+#: .\accounts\templates\accounts\index.html:4
+msgid "Username"
+msgstr "उपयोगकर्ता नाम"
+
+#: .\accounts\forms.py:24 .\accounts\forms.py:111
+msgid "Answer 1"
+msgstr "उत्तर 1"
+
+#: .\accounts\forms.py:25 .\accounts\forms.py:112
+msgid "Answer 2"
+msgstr "उत्तर 2"
+
+#: .\accounts\forms.py:26 .\accounts\forms.py:91
+msgid "Password"
+msgstr "पारण शब्द"
+
+#: .\accounts\forms.py:42 .\accounts\forms.py:46
+msgid "Invalid Credentials"
+msgstr "अवैध प्रत्यय पत्र"
+
+#: .\accounts\forms.py:56 .\accounts\forms.py:72
+msgid "Incorrect response"
+msgstr "गलत जवाब"
+
+#: .\accounts\forms.py:86
+msgid "Username does not exists"
+msgstr "प्रयोक्ता नाम मौजूद नहीं करता है"
+
+#: .\accounts\forms.py:92
+msgid "Confirm password"
+msgstr "पासवर्ड की पुष्टि कीजिये"
+
+#: .\accounts\forms.py:108
+msgid "Email"
+msgstr "ईमेल"
+
+#: .\accounts\forms.py:109 .\templates\registration\login.html:8
+msgid "Question 1"
+msgstr "प्रश्न 1"
+
+#: .\accounts\forms.py:110 .\templates\registration\login.html:13
+msgid "Question 2"
+msgstr "प्रश्न 2"
+
+#: .\accounts\forms.py:127
+msgid "Username already exists"
+msgstr "उपयोगकर्ता का नाम पहले से मौजूद है"
+
+#: .\accounts\forms.py:134
+msgid "Email is taken"
+msgstr "ईमेल में लिया जाता है"
+
+#: .\accounts\forms.py:142
+msgid "Passwords don't match"
+msgstr "पासवर्ड मेल नहीं खाते"
+
+#: .\accounts\forms.py:151
+msgid "Please select 2 different questions"
+msgstr "2 अलग अलग सवाल का चयन करें"
+
+#: .\accounts\models.py:10
+#, fuzzy
+#| msgid "Question 1"
+msgid "question"
+msgstr "प्रश्न 1"
+
+#: .\accounts\models.py:52
+msgid ""
+"Username must be Alpahnumeric or contain any of the following: \". @ + -\" "
 msgstr ""
 
 #: .\accounts\templates\accounts\enter-un.html:7
 msgid "Enter your Username to Proceed to Login"
-msgstr ""
+msgstr "लॉगिन के लिए आगे बढ़ें करने के लिए अपने उपयोगकर्ता नाम दर्ज"
 
-#: .\accounts\templates\accounts\enter-un.html:9
-#, python-format
-msgid "%(error_message)s"
-msgstr ""
-
-#: .\accounts\templates\accounts\enter-un.html:20
-#: .\accounts\templates\accounts\index.html:4
-#: .\templates\registration\login.html:30
-msgid "Username"
-msgstr ""
-
-#: .\accounts\templates\accounts\enter-un.html:24
+#: .\accounts\templates\accounts\enter-un.html:31
+#: .\templates\registration\register.html:77
 msgid "Submit"
-msgstr ""
+msgstr "प्रस्तुत"
 
 #: .\accounts\templates\accounts\index.html:6
 msgid "Index"
-msgstr ""
+msgstr "सूची"
 
 #: .\accounts\templates\accounts\index.html:8
 msgid "To logout click"
-msgstr ""
+msgstr "क्लिक प्रस्थान करना"
 
 #: .\accounts\templates\accounts\index.html:8
 #: .\accounts\templates\accounts\index.html:11
 msgid "here"
-msgstr ""
+msgstr "यहाँ"
 
 #: .\accounts\templates\accounts\index.html:11
 msgid "To login click"
-msgstr ""
+msgstr "प्रवेश करने के लिए क्लिक करें"
 
 #: .\accounts\templates\accounts\logout-page.html:4
 msgid "Logout"
-msgstr ""
+msgstr "लॉग आउट"
 
 #: .\accounts\templates\accounts\logout-page.html:8
 msgid "Do you want to logout ?"
-msgstr ""
+msgstr "आपको लॉगआउट करना चाहते हैं?"
 
 #: .\accounts\templates\accounts\logout-page.html:11
 msgid "Yes"
-msgstr ""
+msgstr "हाँ"
 
 #: .\accounts\templates\accounts\logout-page.html:12
 msgid "No"
-msgstr ""
+msgstr "नहीं"
 
 #: .\accounts\templates\accounts\logout-page.html:15
 msgid "Do you want to"
-msgstr ""
+msgstr "क्या आप करना यह चाहते हैं"
 
 #: .\accounts\templates\accounts\logout-page.html:15
 msgid "login"
-msgstr ""
+msgstr "लॉग इन करें"
 
 #: .\templates\base.html:27
 msgid "Select language"
-msgstr ""
+msgstr "भाषा का चयन करें"
 
 #: .\templates\base.html:38
 msgid "Translate"
-msgstr ""
+msgstr "अनुवाद करना"
+
+#: .\templates\registration\login.html:7
+#: .\templates\registration\login.html:61
+msgid "Login"
+msgstr "लॉग इन करें"
+
+#: .\templates\registration\login.html:11
+msgid "Your browser does not support the audio element."
+msgstr "आपका ब्राउजर में ऑडियो तत्व समर्थित नहीं है।"
+
+#: .\templates\registration\login.html:36
+#: .\templates\registration\login.html:48
+#: .\templates\registration\register.html:43
+#: .\templates\registration\register.html:55
+msgid "Record"
+msgstr "अभिलेख"
+
+#: .\templates\registration\register.html:7
+msgid "Register"
+msgstr "रजिस्टर करें"
